# mri-registration-rp

./: .gitignore  README.md  make_figures.ipynb  make_gifs.py  pyproject.toml  region_plot.ipynb  viz-overview.ipynb  viz-pmin.ipynb  viz-vprec.ipynb
code/: env.sh  exp-prepare.sh  exp-vprec.sh  experiments.sh  setup.sh
code/pmin/: antsRegistration.sbatch
code/space-search/: antsRegistration-0000.sbatch  antsRegistration-0001.sbatch  antsRegistration-0011.sbatch  antsRegistration-0100.sbatch  antsRegistration-0110.sbatch  antsRegistration-0111.sbatch  antsRegistration-1111.sbatch
code/vprec-space_search/: antsRegistration-FP64.sbatch  antsRegistration.sbatch  antsRegistration.sh
containers/: ants-pmin.Dockerfile
logs/slurm/: antsBrainExtraction-1282619_0.out  antsBrainExtraction-1283035_0.out  antsBrainExtraction-1283035_1.out  antsBrainExtraction-1283035_10.out  antsBrainExtraction-1283035_11.out  antsBrainExtraction-1283035_12.out  antsBrainExtraction-1283035_13.out  antsBrainExtraction-1283035_14.out  antsBrainExtraction-1283035_15.out  antsBrainExtraction-1283035_16.out  antsBrainExtraction-1283035_17.out  antsBrainExtraction-1283035_18.out  antsBrainExtraction-1283035_19.out  antsBrainExtraction-1283035_2.out  antsBrainExtraction-1283035_20.out  antsBrainExtraction-1283035_21.out  antsBrainExtraction-1283035_22.out  antsBrainExtraction-1283035_23.out  antsBrainExtraction-1283035_24.out  antsBrainExtraction-1283035_25.out  antsBrainExtraction-1283035_26.out  antsBrainExtraction-1283035_27.out  (+210 more)
paper/: .gitignore  paper.bib  paper.tex
