[project]
name = "mri-registration-rp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "nibabel>=5.3.2",
  "matplotlib>=3.10.5",
  "datalad>=1.2.1",
  "itk>=5.4.4.post1",
  "kaleido>=1.0.0",
  "nbformat>=5.10.4",
  "plotly>=6.3.0",
  "pandas>=2.3.1",
  "scikit-image>=0.25.2",
]
